--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "npm run bundle && build"
   },
   "dependencies": {
+    "dialogs": "^1.1.17",
     "electron-debug": "^1.0.0"
   },
   "devDependencies": {
